# colcon-core

./: .travis.yml  README.rst  appveyor.yml  codecov.yml  colcon.py  publish-python.yaml  pytest.ini  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: bootstrap.yaml  ci.yaml
colcon_core/: __init__.py  argument_default.py  argument_type.py  command.py  dependency_descriptor.py  entry_point.py  event_reactor.py  extension_point.py  feature_flags.py  location.py  logging.py  package_decorator.py  package_descriptor.py  plugin_system.py  python_install_path.py  run_setup_py.py  subprocess.py  topological_order.py  which_python.py
colcon_core/argument_parser/: __init__.py  destination_collector.py  type_collector.py
colcon_core/distutils/commands/: symlink_data.py
colcon_core/environment/: __init__.py  path.py  pythonpath.py
colcon_core/event/: __init__.py  command.py  job.py  output.py  test.py
colcon_core/event_handler/: __init__.py  console_direct.py  console_start_end.py
colcon_core/executor/: __init__.py  sequential.py
colcon_core/output_style/: __init__.py  __main__.py  ansi_colors.py  colors.py
colcon_core/package_augmentation/: __init__.py  python.py
colcon_core/package_discovery/: __init__.py  path.py
colcon_core/package_identification/: __init__.py  ignore.py  python.py
colcon_core/package_selection/: __init__.py
colcon_core/prefix_path/: __init__.py  colcon.py
colcon_core/pytest/: hooks.py
colcon_core/python_project/: distribution.py  spec.py
colcon_core/python_project/hook_caller/: __init__.py  _call_hook.py  _list_hooks.py
colcon_core/python_project/hook_caller_decorator/: __init__.py
colcon_core/shell/: __init__.py  bat.py  dsv.py  installed_packages.py  sh.py
colcon_core/shell/template/: __init__.py  command_prefix.bat.em  command_prefix.sh.em  hook_prepend_value.bat.em  hook_prepend_value.sh.em  package.bat.em  package.sh.em  prefix.bat.em  prefix.sh.em  prefix_chain.bat.em  prefix_chain.sh.em  prefix_util.py  prefix_util.py.em
colcon_core/task/: __init__.py
colcon_core/task/python/: __init__.py  build.py  stage.py  symlink_data.py
colcon_core/task/python/template/: sitecustomize.py.em
colcon_core/task/python/test/: __init__.py  pytest.py  setuppy_test.py
colcon_core/verb/: __init__.py  build.py  stage.py  test.py
debian/patches/: setup.cfg.patch
test/: conftest.py  entry_point_context.py  environment_context.py  extension_point_context.py  run_until_complete.py  spell_check.words  test_action_collector.py  test_argument_default.py  test_argument_parser.py  test_build_python.py  test_command.py  test_copyright_license.py  test_dependency_descriptor.py  test_destination_collector.py  test_distribution.py  test_entry_point.py  test_environment.py  test_environment_path.py  test_environment_pythonpath.py  test_environment_pythonscriptspath.py  test_event_command.py  test_event_handler.py  test_event_handler_console_direct.py  test_event_handler_console_start_end.py  test_event_handler_log_command.py  test_event_reactor.py  test_executor.py  test_executor_sequential.py  test_extension_point.py  test_feature_flags.py  test_flake8.py  test_hook_caller.py  test_location.py  test_logging.py  test_output_style.py  test_package_augmentation.py  test_package_decorator.py  test_package_descriptor.py  test_package_discovery.py  test_package_discovery_path.py  (+21 more)
test/mock_distributions/src/typical_egg_link/: setup.py
test/mock_distributions/src/typical_egg_link/typical_egg_link/: __init__.py
test/mock_distributions/src/typical_egg_link/typical_egg_link.egg-info/: PKG-INFO  entry_points.txt
test/test_hook_caller/mock_backends/: mock_backend.py  mock_backend_obj.py
test/test_hook_caller/with_backend_path/: pyproject.toml
test/test_hook_caller/with_backend_path_no_pythonpath/: pyproject.toml
