[metadata]
name = colcon-core
version = attr: colcon_core.__version__
url = https://github.com/colcon/colcon-core
download_url = https://github.com/colcon/colcon-core/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Command line tool to build sets of software packages.
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  coloredlogs; sys_platform == 'win32'
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov

[options.packages.find]
exclude =
  test
  test.*

[tool:pytest]
junit_suite_name = colcon-core

[options.entry_points]
colcon_core.argument_parser =
colcon_core.environment_variable =
    extension_blacklist = colcon_core.entry_point:EXTENSION_BLACKLIST_ENVIRONMENT_VARIABLE
    home = colcon_core.command:HOME_ENVIRONMENT_VARIABLE
    log_level = colcon_core.command:LOG_LEVEL_ENVIRONMENT_VARIABLE
    log_path = colcon_core.command:LOG_PATH_ENVIRONMENT_VARIABLE
colcon_core.extension_point =
    colcon_core.argument_parser = colcon_core.argument_parser:ArgumentParserDecoratorExtensionPoint
    colcon_core.package_discovery = colcon_core.package_discovery:PackageDiscoveryExtensionPoint
    colcon_core.package_identification = colcon_core.package_identification:PackageIdentificationExtensionPoint
    colcon_core.verb = colcon_core.verb:VerbExtensionPoint
colcon_core.package_discovery =
colcon_core.package_identification =
colcon_core.verb =
console_scripts =
    colcon = colcon_core.command:main
