[metadata]
name = colcon-core
version = attr: colcon_core.__version__
url = https://github.com/colcon/colcon-core
download_url = https://github.com/colcon/colcon-core/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Command line tool to build sets of software packages.
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  coloredlogs; sys_platform == 'win32'
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov

[options.packages.find]
exclude =
  test
  test.*

[tool:pytest]
junit_suite_name = colcon-core

[options.entry_points]
colcon_core.argument_parser =
colcon_core.environment =
colcon_core.environment_variable =
    all_shells = colcon_core.shell:ALL_SHELLS_ENVIRONMENT_VARIABLE
    default_executor = colcon_core.executor:DEFAULT_EXECUTOR_ENVIRONMENT_VARIABLE
    extension_blacklist = colcon_core.entry_point:EXTENSION_BLACKLIST_ENVIRONMENT_VARIABLE
    home = colcon_core.command:HOME_ENVIRONMENT_VARIABLE
    log_level = colcon_core.command:LOG_LEVEL_ENVIRONMENT_VARIABLE
    log_path = colcon_core.command:LOG_PATH_ENVIRONMENT_VARIABLE
colcon_core.event_handler =
colcon_core.executor =
colcon_core.extension_point =
    colcon_core.argument_parser = colcon_core.argument_parser:ArgumentParserDecoratorExtensionPoint
    colcon_core.environment = colcon_core.environment:EnvironmentExtensionPoint
    colcon_core.event_handler = colcon_core.event_handler:EventHandlerExtensionPoint
    colcon_core.executor = colcon_core.executor:ExecutorExtensionPoint
    colcon_core.package_augmentation = colcon_core.package_augmentation:PackageAugmentationExtensionPoint
    colcon_core.package_discovery = colcon_core.package_discovery:PackageDiscoveryExtensionPoint
    colcon_core.package_identification = colcon_core.package_identification:PackageIdentificationExtensionPoint
    colcon_core.package_selection = colcon_core.package_selection:PackageSelectionExtensionPoint
    colcon_core.shell = colcon_core.shell:ShellExtensionPoint
    colcon_core.task.build = colcon_core.task:TaskExtensionPoint
    colcon_core.task.test = colcon_core.task:TaskExtensionPoint
    colcon_core.verb = colcon_core.verb:VerbExtensionPoint
colcon_core.package_augmentation =
colcon_core.package_discovery =
    path = colcon_core.package_discovery.path:PathPackageDiscovery
colcon_core.package_identification =
colcon_core.package_selection =
colcon_core.shell =
colcon_core.task.build =
colcon_core.task.test =
colcon_core.verb =
console_scripts =
    colcon = colcon_core.command:main
