[metadata]
name = colcon-core
version = attr: colcon_core.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-core/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-core/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Command line tool to build sets of software packages.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  coloredlogs; sys_platform == 'win32'
  EmPy
  # the pytest dependency and its extensions are provided for convenience
  # even though they are only conditional
  pytest
  pytest-cov
  pytest-repeat
  pytest-rerunfailures
  setuptools
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  mock
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = false

[options.packages.find]
exclude =
  test
  test.*

[tool:pytest]
junit_suite_name = colcon-core

[options.entry_points]
colcon_core.argument_parser =
colcon_core.environment =
    path = colcon_core.environment.path:PathEnvironment
    pythonpath = colcon_core.environment.pythonpath:PythonPathEnvironment
colcon_core.environment_variable =
    all_shells = colcon_core.shell:ALL_SHELLS_ENVIRONMENT_VARIABLE
    default_executor = colcon_core.executor:DEFAULT_EXECUTOR_ENVIRONMENT_VARIABLE
    extension_blacklist = colcon_core.entry_point:EXTENSION_BLACKLIST_ENVIRONMENT_VARIABLE
    home = colcon_core.command:HOME_ENVIRONMENT_VARIABLE
    log_level = colcon_core.command:LOG_LEVEL_ENVIRONMENT_VARIABLE
    log_path = colcon_core.command:LOG_PATH_ENVIRONMENT_VARIABLE
colcon_core.event_handler =
    console_direct = colcon_core.event_handler.console_direct:ConsoleDirectEventHandler
    console_start_end = colcon_core.event_handler.console_start_end:ConsoleStartEndEventHandler
    log_command = colcon_core.event_handler.log_command:LogCommandEventHandler
colcon_core.executor =
    sequential = colcon_core.executor.sequential:SequentialExecutor
colcon_core.extension_point =
    colcon_core.argument_parser = colcon_core.argument_parser:ArgumentParserDecoratorExtensionPoint
    colcon_core.environment = colcon_core.environment:EnvironmentExtensionPoint
    colcon_core.event_handler = colcon_core.event_handler:EventHandlerExtensionPoint
    colcon_core.executor = colcon_core.executor:ExecutorExtensionPoint
    colcon_core.package_augmentation = colcon_core.package_augmentation:PackageAugmentationExtensionPoint
    colcon_core.package_discovery = colcon_core.package_discovery:PackageDiscoveryExtensionPoint
    colcon_core.package_identification = colcon_core.package_identification:PackageIdentificationExtensionPoint
    colcon_core.package_selection = colcon_core.package_selection:PackageSelectionExtensionPoint
    colcon_core.python_testing = colcon_core.task.python.test:PythonTestingStepExtensionPoint
    colcon_core.shell = colcon_core.shell:ShellExtensionPoint
    colcon_core.task.build = colcon_core.task:TaskExtensionPoint
    colcon_core.task.test = colcon_core.task:TaskExtensionPoint
    colcon_core.verb = colcon_core.verb:VerbExtensionPoint
colcon_core.package_augmentation =
colcon_core.package_discovery =
    path = colcon_core.package_discovery.path:PathPackageDiscovery
colcon_core.package_identification =
    ignore = colcon_core.package_identification.ignore:IgnorePackageIdentification
    python = colcon_core.package_identification.python:PythonPackageIdentification
colcon_core.package_selection =
colcon_core.python_testing =
    pytest = colcon_core.task.python.test.pytest:PytestPythonTestingStep
    setuppy_test = colcon_core.task.python.test.setuppy_test:SetuppyPythonTestingStep
colcon_core.shell =
    bat = colcon_core.shell.bat:BatShell
    sh = colcon_core.shell.sh:ShShell
colcon_core.task.build =
    python = colcon_core.task.python.build:PythonBuildTask
colcon_core.task.test =
    python = colcon_core.task.python.test:PythonTestTask
colcon_core.verb =
    build = colcon_core.verb.build:BuildVerb
    test = colcon_core.verb.test:TestVerb
console_scripts =
    colcon = colcon_core.command:main

[options.package_data]
colcon_core.shell.template = *.em

[flake8]
import-order-style = google
